<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">108天</string>
    <string name="action_search"></string>
    <string name="defaultCity">北京</string>
    <string name="default_list_tile">列表</string>
    <string name="loading">加载中&#8230;</string>
    <string name="home_fontFamily">sans</string>
    <string name="search_hint">搜索目的地、活动</string>
    <string name="comment_edit_hit">我要说两句...</string>
    <string name="empty_list_msg">暂无数据</string>
    <string name="net_acc_failed">访问失败，请稍后重试</string>
    <string name="server_acc_failed">访问服务器失败，请检查网络设置！</string>
    <string name="finish_list_msg">没有更多啦！</string>
    <string name="cancel">取消</string>
    <string name="comment_edit_submit">提交</string>
    <string name="comment_toolbar_hint">写评论</string>
    <string name="feedback_content_hint">留下你的宝贵意见,我们将为您做得更好！</string>
    <string name="feedback_phone_hint">留下手机号，以便我们联系你</string>
    <string name="wechat_not_install">微信未安装！</string>
    <string name="signup_step1">1 输入手机号码</string>
    <string name="signup_step2">2 输入验证码</string>
    <string name="signup_step3">3 设置密码</string>
    <string name="i_accept">我已阅读并接受</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="verify_code_ok">确认</string>
    <string name="input_your_phone_num">请输入手机号</string>
    <string name="input_your_password">请输入密码</string>
    <string name="input_correct_phone_num">请输入正确的手机号</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="submit_verify_code">提交验证码</string>
    <string name="resend_verify_code">重发验证码</string>
    <string name="signup_nextstep">下一步</string>
    <string name="submit_login">提交验证</string>
    <string name="resend_verify_code_countdown">剩余%s秒</string>
    <string name="password_hint">6&#8211;32位字母数字符号组合</string>
    <string name="password_confirm_hint">请再次输入密码</string>
    <string name="password_illegal_hint">密码为6&#8211;32位字母数字符号的任意组合</string>
    <string name="password_inconsistent_hint">密码输入不一致</string>
    <string name="reset_pwd">找回密码</string>
    <string name="set_pwd">设置密码</string>
    <string name="signup">注册</string>
    <string name="to_signup">新用户注册</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="qq_login_tips">"使用QQ登录 "</string>
    <string name="weibo_login_tips">使用微博登录</string>
    <string name="setting_login_tips">"关于我们 "</string>
    <string name="forget_password">忘记密码?</string>
    <string name="signup_btn_text">立即注册</string>
    <string name="signup_success">注册成功</string>
    <string name="start_experience">开始体验</string>
    <string name="playtype_filter">玩法分类</string>
    <string name="groups_filter">人群分类</string>
    <string name="choiceness_filter">精选</string>
    <string name="guide_attractions">周边玩</string>
    <string name="guide_farmyard">农家院</string>
    <string name="guide_resort">度假村</string>
    <string name="guide_pickpart">采摘</string>
    <string name="guide_list_tips">热门推荐</string>
    <string name="list_tab_default">默认</string>
    <string name="list_tab_near">附近</string>
    <string name="list_tab_price">价格</string>
    <string name="guide_recommandresean">推荐理由</string>
    <string name="merchant_info">商家信息</string>
    <string name="merchant_brief">商家环境</string>
    <string name="merchant_pleasure">吃喝玩乐</string>
    <string name="environment_brief">环境概要</string>
    <string name="traffic_tips">乘车路线，自驾路线</string>
    <string name="indicative_price">参考价格：</string>
    <string name="trip_tips">出行须知</string>
    <string name="attractions_feature">特色看点</string>
    <string name="ticket_price_desc">门票信息：%s</string>
    <string name="peakseason">开放时间：旺季：%s</string>
    <string name="lowseason">" 淡季：%s"</string>
    <string name="suggest_time">最佳时节：%s</string>
    <string name="duration">浏览时间：%s</string>
    <string name="comment">评论</string>
    <string name="spots_around">周边景点</string>
    <string name="species">采摘品种</string>
    <string name="consulting">咨询</string>
    <string name="activity_info">活动信息</string>
    <string name="activity_detail">详情介绍</string>
    <string name="expiry_date">有效日期：</string>
    <string name="coast_detail">费用详情：</string>
    <string name="activity_pay_model">付费方式：</string>
    <string name="activity_tips">出行提示：</string>
    <string name="activity_time">活动时间：%s</string>
    <string name="activity_dest">活动地点：%s</string>
    <string name="activity_themes">活动类型：%s</string>
    <string name="activity_gathering_time">集合时间：%s</string>
    <string name="activity_gathering_location">集合地点：%s</string>
    <string name="edit_profile">编辑资料</string>
    <string name="edit_profile_nickname">名字</string>
    <string name="edit_profile_location">常居地</string>
    <string name="edit_profile_gender">性别</string>
    <string name="edit_profile_sex">年龄</string>
    <string name="edit_profile_bing_phone">手机号</string>
    <string name="user_center_gender_female">女</string>
    <string name="user_center_gender_male">男</string>
    <string name="get_photo_by_camera">相机</string>
    <string name="get_photo_by_picture">本地照片</string>
    <string name="edit_profile_ok">确认</string>
    <string name="edit_profile_cancel">取消</string>
    <string name="edit_profile_bind">绑定</string>
    <string name="price_symbol_cny">¥</string>
    <string name="search_distance_option">距离</string>
    <string name="search_groups_option">人群</string>
    <string name="search_themes_option">主题</string>
    <string name="pick_fruit">水果</string>
    <string name="pick_vegetable">蔬菜</string>
    <string name="pick_nut">干果</string>
    <string name="pick_crop">农作物</string>
    <string name="search_distance_all">全部</string>
    <string name="search_groups_incity">"市内 "</string>
    <string name="search_themes_outskirts">" 近郊"</string>
    <string name="search_themes_outer">远郊</string>
    <string name="groups_couples">情侣</string>
    <string name="groups_parentchild">亲子</string>
    <string name="groups_friends">朋友</string>
    <string name="groups_family">家庭</string>
    <string name="groups_company">公司</string>
    <string name="ptr_pull_to_refresh">下拉刷新...</string>
    <string name="ptr_release_to_refresh">释放刷新...</string>
    <string name="ptr_refreshing">刷新中…</string>
    <string name="ptr_last_updated">跟新中: %1$s</string>
    <string name="crop__saving">正在保存照片…</string>
    <string name="crop__wait">请等待…</string>
    <string name="crop__pick_error">无效的图片</string>
    <string name="crop__done">完成</string>
    <string name="crop__cancel" tools:ignore="ButtonCase">取消</string>
    <string name="storage_info_none1">亲，还没有收藏%s哦</string>
    <string name="storage_info_none2">快去看看吧~</string>
    <string name="storage_personal_strategy">我的攻略</string>
    <string name="storage_personal_activity">我的活动</string>
    <string name="storage_personal_scene">我的景点</string>
    <string name="storage_personal_accommodation">我的住宿</string>
    <string name="info_personal_order">订单</string>
    <string name="info_personal_coupon">优惠券</string>
    <string name="info_personal_score">积分</string>
    <string name="info_personal_message">消息</string>
    <string name="info_personal_storage">收藏</string>
    <string name="info_personal_code">消费码</string>
    <string name="info_personal_unpay">待付款</string>
    <string name="info_personal_consumed">待评价</string>
    <string name="info_personal_unconsume">未使用</string>
    <string name="info_personal_setting">设置</string>
    <string name="default_name">点击登陆</string>
    <string name="coupon_code_hint">输入优惠券密码领取优惠券</string>
    <string name="coupon_button_get">点击领取</string>
    <string name="coupon_has_gotten">已领取的优惠券</string>
    <string name="coupon_use_rule">优惠券使用规则</string>
    <string name="coupon_info_none">您暂无可以使用的优惠券~</string>
    <string name="coupon_info_no_use">您暂无可以用来购买该产品的优惠券~</string>
    <string name="code_info_none">您暂无可以使用的消费码~</string>
    <string name="order_info_none1">亲，还没有订单哦</string>
    <string name="order_info_none2">快去看看吧~</string>
    <string name="valid_time_to">有效期至：</string>
    <string name="valid_time_to_date">有效期至 %s</string>
    <string name="consume_code_num">消费码：</string>
    <string name="refund_confirm_question">确定要退款吗？</string>
    <string name="input_coupon_password">请输入领取码！</string>
    <string name="fetch_coupon_failed_info">优惠券领取失败！</string>
    <string name="fetch_coupon_success_info">优惠券领取成功！</string>
    <string name="coupon_input_range">1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="coupon_worth">%s元</string>
    <string name="total_fee">总价：</string>
    <string name="count">数量：</string>
    <string name="pay">付款</string>
    <string name="support_refund">本产品支持退款</string>
    <string name="no_support_refund">本产品不支持退款</string>
    <string name="refundable">支持退</string>
    <string name="unrefundable">不可退</string>
    <string name="check_reply">查看回复</string>
    <string name="select_city_hint">请输入城市...</string>
    <string name="feedback_title">意见反馈</string>
    <string name="feedback_tips">联系信息</string>
    <string name="feedback_mobile">手机：</string>
    <string name="feedback_qq">QQ：</string>
    <string name="feedback_email">邮箱：</string>
    <string name="feedback_plain">其他：</string>
    <string name="feedback_send">发送</string>
    <string name="feedback_save">保存</string>
    <string name="feedback_hint">输入内容</string>
    <string name="at">\@</string>
    <string name="consult_consult_title">我要咨询</string>
    <string name="consult_comment_title">我要评论</string>
    <string name="consult_thread_count">(%s)</string>
    <string name="consult_consult_hint">提问：</string>
    <string name="consult_comment_hint">评论：</string>
    <string name="consult_reply_hint">回复%s：</string>
    <string name="consult_write_consult">写咨询</string>
    <string name="consult_write_comment">写评论</string>
    <string name="consult_participate">购买</string>
    <string name="consult_title_consult">提问</string>
    <string name="consult_title_comment">评论</string>
    <string name="consult_detail_none">亲，还没有相关资讯信息哦</string>
    <string name="message_info_none">亲，还没有消息哦</string>
    <string name="message_my_question">我的留言</string>
    <string name="message_to_product">查看详情</string>
    <string name="message_reply_hint">回复</string>
    <string name="fee_detail">费用详情</string>
    <string name="detail_label">活动详情</string>
    <string name="more_merchant_detail">更多商家详情</string>
    <string name="more_fee_detail">更多费用详情</string>
    <string name="travel_tips">出行提示</string>
    <string name="more_travel_tips">更多出行提示</string>
    <string name="statement">108天声明</string>
    <string name="more_statement">更多108天声明</string>
    <string name="share">分享到</string>
    <string name="toolbar_price">¥%s</string>
    <string name="no_consult_tips">还没有人提问过哦，快来抢位置吧~</string>
    <string name="purchase_order_confirmed">请付款完成预定</string>
    <string name="purchase_order_info_tips">订单信息</string>
    <string name="purchase_order_pay_method">支付方式</string>
    <string name="purchase_order_product_tips">产品信息：</string>
    <string name="purchase_order_product_price_tips">产品单价：</string>
    <string name="purchase_order_date_tips">使用日期：</string>
    <string name="purchase_order_num_tips">购买数量：</string>
    <string name="purchase_order_price_tips">订单价格：</string>
    <string name="purchase_order_total_tips">订单金额：</string>
    <string name="purchase_order_pay_tips">支付金额：</string>
    <string name="purchase_order_coupon_tips">优惠金额：</string>
    <string name="purchase_order_product">共%s件预定产品</string>
    <string name="purchase_success_name_tips">产品信息：</string>
    <string name="purchase_success_serial_tips">流水号：</string>
    <string name="purchase_success_order_number_tips">订单号：</string>
    <string name="selector_default_sort">智能排序</string>
    <string name="selector_price_asc_sort">价格升</string>
    <string name="selector_price_desc_sort">价格降</string>
    <string name="selector_distance_sort">距离最近</string>
</resources>