<RadioGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio"
        android:orientation="vertical"
        android:divider="@drawable/divider_selector"
        android:showDividers="middle"
        android:dividerPadding="10dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RadioButton
            android:id="@+id/default_sort"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:drawableRight="@drawable/selector_rb_background"
            android:button="@null"
            android:text="@string/selector_default_sort"
            android:textColor="@drawable/selector_radio_text_color"
            android:textSize="15sp"
            android:checked="true"/>
    <RadioButton
            android:id="@+id/price_asc_sort"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:drawableRight="@drawable/selector_rb_background"
            android:button="@null"
            android:text="@string/selector_price_asc_sort"
            android:textColor="@drawable/selector_radio_text_color"
            android:textSize="15sp"
            android:checked="false"/>
    <RadioButton
            android:id="@+id/price_desc_sort"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:drawableRight="@drawable/selector_rb_background"
            android:button="@null"
            android:text="@string/selector_price_desc_sort"
            android:textColor="@drawable/selector_radio_text_color"
            android:textSize="15sp"
            android:checked="false"/>
    <RadioButton
            android:id="@+id/distance_sort"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:drawableRight="@drawable/selector_rb_background"
            android:button="@null"
            android:text="@string/selector_distance_sort"
            android:textColor="@drawable/selector_radio_text_color"
            android:textSize="15sp"
            android:checked="false"/>
</RadioGroup>
