<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/bindPhone"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:divider="@drawable/divider"
              android:showDividers="middle"
              android:layout_marginTop="@dimen/margin_top_standard"
              android:background="@drawable/bg_list_card_style"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">
        <EditText
                android:id="@+id/phone_edit"
                android:layout_weight="1.0"
                android:layout_width="0dp"
                android:layout_gravity="center"
                style="@style/edit_text_style"
                android:background="@color/transparent"
                android:hint="@string/input_your_phone_num"
                android:textColorHint="@color/black_1"
                android:imeOptions="actionDone|flagNoExtractUi"/>
        <Button
                android:id="@+id/resend_code_button"
                android:layout_width="110dp"
                android:layout_height="32dp"
                android:enabled="false"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/button_gray_border"
                android:text="@string/get_verify_code"
                android:textColor="@color/button_color"
                android:textSize="@dimen/text_middle_size"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/verify_code_edit"
                android:layout_weight="1.0"
                android:layout_width="0dp"
                android:layout_gravity="center"
                style="@style/edit_text_style"
                android:background="@color/transparent"
                android:hint="@string/input_verify_code"/>

        <Button
                android:id="@+id/verify_code_button"
                android:layout_width="110dp"
                android:layout_height="32dp"
                android:enabled="false"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/button_gray_border"
                android:text="@string/get_verify_code"
                android:textColor="@color/button_color"
                android:textSize="@dimen/text_middle_size"/>
    </LinearLayout>


    <LinearLayout
            android:id="@+id/controller"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/edit_profile_cancel"
                android:textColor="@color/main_color"/>

        <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_vertical"
                android:background="@color/divider_line_color"/>

        <TextView
                android:id="@+id/checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/edit_profile_bind"
                android:textColor="@color/main_color"/>
    </LinearLayout>

</LinearLayout>