<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="313dp"
              android:layout_height="wrap_content"
              android:paddingLeft="12dp"
              android:paddingRight="12dp"
              android:minHeight="260dp"
              android:minWidth="313dp"
              android:gravity="center"
              android:divider="@drawable/divider"
              android:showDividers="middle"
              android:background="@drawable/bg_white_rectangle_5"
              android:orientation="vertical">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:textColor="@color/title_color"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/buy_change_booker_phone"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="62dp">
        <EditText
                android:id="@+id/phone_edit"
                android:layout_weight="1.0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:layout_gravity="center"
                android:inputType="phone"
                android:background="@color/transparent"
                android:textColorHint="@color/gray_1"
                android:textColor="@color/title_color"
                android:textSize="17sp"
                android:hint="@string/input_your_phone_num"/>
        <Button
                android:id="@+id/resend_code_button"
                android:layout_width="85dp"
                android:layout_height="37dp"
                android:enabled="false"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/bg_get_verify_code"
                android:text="@string/get_verify_code"
                android:textColor="@color/main_red"
                android:textSize="15sp"/>
    </LinearLayout>
    <EditText
            android:id="@+id/verify_code_edit"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:inputType="phone"
            android:background="@color/transparent"
            android:hint="@string/input_verify_code"
            android:textColorHint="@color/gray_1"
            android:textColor="@color/title_color"
            android:textSize="17sp"
            android:imeOptions="actionDone|flagNoExtractUi"/>
    <TextView
            android:id="@+id/nextStep"
            android:layout_width="269dp"
            android:layout_height="48dp"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_red_button_rectangle_3"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/submit_login"/>
</LinearLayout>