<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <com.ksider.mobile.android.scrollListView.OverScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/bottom_button_height"
            android:clipToPadding="false">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:paddingLeft="@dimen/margin_standard"
                      android:paddingRight="@dimen/margin_standard"
                      android:paddingBottom="10dp"
                      android:orientation="vertical">
            <TextView
                    style="@style/order_page_title"
                    android:drawableLeft="@drawable/purchase_order_confirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/purchase_order_confirmed"/>
            <TextView
                    android:id="@+id/order_info_tag"
                    android:drawableLeft="@drawable/order_order_info_icon"
                    style="@style/order_page_label"
                    android:text="@string/purchase_order_info_tips"/>
            <LinearLayout
                    style="@style/order_module_background">
                <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                <RelativeLayout android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                    <TextView
                            style="@style/pay_label"
                            android:text="@string/purchase_order_product_tips"/>
                    <TextView
                            android:id="@+id/order_title"
                            android:ems="15"
                            android:singleLine="true"
                            android:ellipsize="end"
                            style="@style/info_order_value"/>
                </RelativeLayout>
                <RelativeLayout android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                    <TextView
                            style="@style/pay_label"
                            android:text="@string/purchase_order_product_price_tips"/>
                    <TextView
                            android:id="@+id/product_price"
                            android:ems="15"
                            android:singleLine="true"
                            android:ellipsize="end"
                            style="@style/info_order_value"/>
                </RelativeLayout>
                <RelativeLayout
                        android:id="@+id/date_clickarea"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            style="@style/pay_label"
                            android:text="@string/purchase_order_date_tips"/>

                    <TextView
                            android:id="@+id/use_date"
                            style="@style/info_order_value"/>
                </RelativeLayout>
                <RelativeLayout
                        android:id="@+id/deal_num_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            style="@style/pay_label"
                            android:text="@string/purchase_order_num_tips"/>
                    <TextView
                            android:id="@+id/quantity"
                            style="@style/info_order_value"/>
                </RelativeLayout>
                <RelativeLayout
                        android:id="@+id/coupon_use_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:text="@string/purchase_order_coupon_tips"
                            style="@style/pay_label"/>
                    <TextView
                            android:id="@+id/coupon_worth"
                            style="@style/info_order_value"/>
                </RelativeLayout>
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:text="@string/purchase_order_pay_tips"
                            style="@style/pay_label"/>
                    <TextView
                            android:id="@+id/to_pay"
                            android:textColor="@color/main_red"
                            style="@style/info_order_value"/>
                </RelativeLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                    <View
                            android:layout_height="5dp"
                            android:layout_width="5dp"
                            android:background="@drawable/circle_red"/>
                    <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:textSize="@dimen/partion_content_text_size"
                            android:textColor="@color/main_red"
                            android:text="@string/kindly_reminder"/>
                    <TextView
                            android:id="@+id/refundAble"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/red"
                            android:textSize="@dimen/partion_content_text_size"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                    android:layout_marginTop="25dp"
                    android:drawableLeft="@drawable/order_order_info_icon"
                    style="@style/order_page_label"
                    android:text="@string/purchase_order_pay_method"/>
            <LinearLayout
                    style="@style/order_module_background">
                <View android:layout_height="0dp"
                      android:layout_width="match_parent"/>
                <RadioGroup
                        android:id="@+id/payment_channel"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <RadioButton
                            android:id="@+id/alipay"
                            android:paddingRight="@dimen/margin_standard"
                            android:drawablePadding="@dimen/margin_standard"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_alignParentRight="true"
                            android:button="@null"
                            android:drawableLeft="@drawable/purchase_alipay_icon"
                            android:drawableRight="@drawable/rb_backgroud"
                            android:gravity="center|left"
                            android:text="@string/ali_pay"
                            android:textColor="@color/black_1"
                            android:checked="true"/>
                    <RadioButton
                            android:id="@+id/weixinpay"
                            android:paddingRight="@dimen/margin_standard"
                            android:drawablePadding="@dimen/margin_standard"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_alignParentRight="true"
                            android:gravity="center|left"
                            android:text="@string/weixin_pay"
                            android:textColor="@color/black_1"
                            android:button="@null"
                            android:drawableRight="@drawable/rb_backgroud"
                            android:drawableLeft="@drawable/purchase_wechat_icon"
                            android:checked="false"/>
                </RadioGroup>
                <View android:layout_height="0dp"
                      android:layout_width="match_parent"/>
            </LinearLayout>
        </LinearLayout>
    </com.ksider.mobile.android.scrollListView.OverScrollView>
    <include layout="@layout/purchase_bottom_bar"/>
</RelativeLayout>