<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:orientation="vertical">
    <LinearLayout
            android:orientation="vertical"
            android:background="@color/white"
            android:divider="@drawable/divider"
            android:showDividers="middle|end"
            android:minWidth="200dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="55dp">
            <TextView
                    android:text="+86"
                    android:layout_width="59dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    style="@style/pay_label"/>
            <View
                    android:layout_marginTop="@dimen/margin_top_standard"
                    android:layout_marginBottom="@dimen/margin_bottom_standard"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/divider"/>
            <EditText
                    android:id="@+id/phone_edit"
                    android:layout_weight="1.0"
                    android:layout_width="0dp"
                    android:layout_marginLeft="@dimen/icon_margin"
                    android:layout_gravity="center"
                    android:inputType="phone"
                    style="@style/pay_label"
                    android:background="@color/transparent"
                    android:hint="@string/input_your_phone_num"/>
            <TextView
                    android:id="@+id/resend_code_button"
                    android:layout_width="83dp"
                    android:layout_height="38dp"
                    android:enabled="false"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/send_verify_code"
                    android:textColor="@color/main_color"
                    android:textSize="@dimen/text_small_size"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="55dp">
            <TextView
                    android:text="验证码"
                    android:layout_width="59dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    style="@style/pay_label"/>
            <View
                    android:layout_marginTop="@dimen/margin_top_standard"
                    android:layout_marginBottom="@dimen/margin_bottom_standard"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/divider"/>
            <EditText
                    android:id="@+id/verify_code_edit"
                    android:layout_weight="1.0"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="@dimen/icon_margin"
                    android:inputType="phone"
                    android:background="@color/transparent"
                    android:hint="@string/input_verify_code"
                    style="@style/pay_label"
                    android:imeOptions="actionDone|flagNoExtractUi"/>
            <TextView
                    android:id="@+id/nextStep"
                    android:layout_width="83dp"
                    android:layout_height="38dp"
                    android:enabled="false"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/verify_code_ok"
                    android:textColor="@color/main_color"
                    android:textSize="@dimen/text_small_size"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>